@@ -15,7 +15,7 @@ const getEmailAddress = mailto => mailto.replace('mailto:', '').split('?')[0];
 const getPhoneNumber = tel => tel.replace('tel:', '').split('?')[0];
 const getDomainName = url => url.replace(/(^\w+:|^)\/\//, '').split('/')[0];
 
-// Determines how to display the link based on its type: page, mail, or external.
+// Determines how to display the link based on its type: page, mail, anchor or external.
 export const getLinkAttributes = (data) => {
   const url = data.url || null;
   let icon;
@@ -33,6 +33,9 @@ export const getLinkAttributes = (data) => {
   } else if (url.startsWith('tel:')) {
     icon = LINK_ICON;
     label = getPhoneNumber(url);
+  } else if (url.startsWith('#')) {
+    icon = LINK_ICON;
+    label = url;
   } else {
     icon = LINK_ICON;
     label = getDomainName(url);
