@@ -60,6 +60,10 @@ describe('Link', () => {
       expect(getLinkAttributes({ url: 'tel:+46700000000' })).toMatchObject({
         url: 'tel:+46700000000',
         label: '+46700000000',
+    it('anchor', () => {
+      expect(getLinkAttributes({ url: '#testanchor' })).toMatchObject({
+        url: '#testanchor',
+        label: '#testanchor',
       });
     });
 
