@@ -39,6 +39,7 @@
                         'allow_external_link': true,
                         'allow_email_link': true,
                         'allow_phone_link': true
+                        'allow_anchor_link': true,
                     };
 
                     enclosingLink = getEnclosingLink();
@@ -60,6 +61,9 @@
                         } else if (href.startsWith('tel:')) {
                             url = window.chooserUrls.phoneLinkChooser;
                             href = href.replace('tel:', '');
+                        } else if (href.startsWith('#')) {
+                            url = window.chooserUrls.anchorLinkChooser;
+                            href = href.replace('#', '');
                             urlParams['link_url'] = href;
                         } else if (!linkType) {  /* external link */
                             url = window.chooserUrls.externalLinkChooser;
