@@ -1,5 +1,5 @@
 {% load i18n wagtailadmin_tags %}
-{% if allow_external_link or allow_email_link or allow_phone_link or current == 'external' or current == 'email' or current == 'phone' %}
+{% if allow_external_link or allow_email_link or allow_phone_link or allow_anchor_link or current == 'external' or current == 'email' or current == 'phone' or current == 'anchor' %}
     <p class="link-types">
         {% if current == 'internal' %}
             <b>{% trans "Internal link" %}</b>
@@ -24,9 +24,15 @@
         {% endif %}
 
         {% if current == 'phone' %}
-        | <b>{% trans "Phone link" %}</b>
+            | <b>{% trans "Phone link" %}</b>
         {% elif allow_phone_link %}
-        | <a href="{% url 'wagtailadmin_choose_page_phone_link' %}{% querystring p=None parent_page_id=parent_page_id %}">{% trans "Phone link" %}</a>
+            | <a href="{% url 'wagtailadmin_choose_page_phone_link' %}{% querystring p=None parent_page_id=parent_page_id %}">{% trans "Phone link" %}</a>
+        {% endif %}
+
+        {% if current == 'anchor' %}
+            | <b>{% trans "Anchor link" %}</b>
+        {% elif allow_anchor_link %}
+            | <a href="{% url 'wagtailadmin_choose_page_anchor_link' %}{% querystring p=None parent_page_id=parent_page_id %}">{% trans "Anchor link" %}</a>
         {% endif %}
     </p>
 {% endif %}
