@@ -11,6 +11,7 @@
         'externalLinkChooser': '{% url "wagtailadmin_choose_page_external_link" %}',
         'emailLinkChooser': '{% url "wagtailadmin_choose_page_email_link" %}',
         'phoneLinkChooser': '{% url "wagtailadmin_choose_page_phone_link" %}',
+        'anchorLinkChooser': '{% url "wagtailadmin_choose_page_anchor_link" %}',
     };
     window.unicodeSlugsEnabled = {% if unicode_slugs_enabled %}true{% else %}false{% endif %};
 </script>
